Bug 190778 - [gtk2] Assumes font sizes are integers, they are not; r=blizzard sr=roc